--- a/ExcelAddInVSTOCS/ExcelAddInVSTOCS/ExcelAddInVSTOCS.csproj
+++ b/ExcelAddInVSTOCS/ExcelAddInVSTOCS/ExcelAddInVSTOCS.csproj
@@ -107,6 +107,12 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.2.10.0\lib\net45\Serilog.dll</HintPath>
+    </Reference>
+    <Reference Include="Serilog.Sinks.File, Version=5.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.Sinks.File.5.0.0\lib\net45\Serilog.Sinks.File.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -175,6 +181,7 @@
     <Compile Include="DemoTaskPaneWPF.xaml.cs">
       <DependentUpon>DemoTaskPaneWPF.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DemoWorksheetEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -192,6 +199,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="ExcelAddInVSTOCS_TemporaryKey.pfx" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
