--- a/ExcelAddInVSTOCS/ExcelAddInVSTOCS/packages.config
+++ b/ExcelAddInVSTOCS/ExcelAddInVSTOCS/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Serilog" version="2.10.0" targetFramework="net45" />
-  <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net45" />
+  <package id="FreeSql" version="3.2.100" targetFramework="net461" />
+  <package id="FreeSql.Provider.Sqlite" version="3.2.100" targetFramework="net461" />
+  <package id="Serilog" version="2.10.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net461" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net461" />
 </packages>
