--- a/ExcelAddInVSTOCS/ExcelAddInVSTOCS/ExcelAddInVSTOCS.csproj
+++ b/ExcelAddInVSTOCS/ExcelAddInVSTOCS/ExcelAddInVSTOCS.csproj
@@ -242,6 +242,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="App.config" />
     <None Include="ExcelAddInVSTOCS_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
